Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -96,6 +96,10 @@ stages:
   displayName: Terraform Destroy
   dependsOn: start_aci
   condition: eq(variables.destroy, true)
+  pool:
+    name: Contoso
+    demands: 
+      - agent.name -equals acicontoso
   jobs: 
   - job: manual_validation
     displayName: Approval Gate
