--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,3 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
   - main
 
@@ -19,8 +14,8 @@ variables:
   - name: AZP-RG-NAME
     value: rg-devops
   # Name of ACI agent
-  - name: AZP-AGENT-NAME
-    value: $[ lower(variables['System.TeamProject']-variables['Build.BuildId']) ]
+  - name: AZP-PROJ-NAME
+    value: $[ lower(variables['System.TeamProject']) ]
   # Virtual network where ACI will be created
   - name: AZP-VNET-NAME
     value: vn-devops
@@ -52,7 +47,7 @@ stages:
               inlineScript: |
                 az container create \
                   -g $(AZP-RG-NAME) \
-                  -n $(AZP-AGENT-NAME) \
+                  -n $(AZP-PROJ-NAME)-$(Build.BuildId) \
                   --image $(ACR-IMAGE) \
                   --registry-login-server $(ACR-SERVER) \
                   --registry-username $(contosocr-pull-usr) \
@@ -65,7 +60,7 @@ stages:
                   --cpu 1 \
                   --memory 1 \
                   --os-type Linux \
-                  -e AZP_URL=$(AZDO-URL) AZP_AGENT_NAME=$(AZP-AGENT-NAME) AZP_POOL=$(AZDO-POOL) \
+                  -e AZP_URL=$(AZDO-URL) AZP_AGENT_NAME=$(AZP-PROJ-NAME)-$(Build.BuildId) AZP_POOL=$(AZDO-POOL) \
                   --secure-environment-variables AZP_TOKEN=$(devops-pat)
   - stage: terraform_plan
     displayName: Terraform Plan
@@ -74,7 +69,7 @@ stages:
     pool:
       name: Contoso
       demands:
-        - agent.name -equals $(AZP-AGENT-NAME)
+        - agent.name - equals $(AZP-PROJ-NAME)-$(Build.BuildId)
     jobs:
       - job: terraform_plan
         displayName: Terraform Plan
@@ -103,7 +98,7 @@ stages:
     pool:
       name: Contoso
       demands:
-        - agent.name -equals $(AZP-AGENT-NAME)
+        - agent.name - equals $(AZP-PROJ-NAME)-$(Build.BuildId)
     jobs:
       - job: manual_validation
         displayName: Approval Gate
@@ -142,7 +137,7 @@ stages:
     pool:
       name: Contoso
       demands:
-        - agent.name -equals $(AZP-AGENT-NAME)
+        - agent.name - equals $(AZP-PROJ-NAME)-$(Build.BuildId)
     jobs:
       - job: manual_validation
         displayName: Approval Gate
@@ -187,4 +182,4 @@ stages:
               azureSubscription: "terraform"
               scriptType: "bash"
               scriptLocation: "inlineScript"
-              inlineScript: "az container delete -n $(AZP-AGENT-NAME) -g $(AZP-RG-NAME) -y"
+              inlineScript: "az container delete -n $(AZP-PROJ-NAME)-$(Build.BuildId) -g $(AZP-RG-NAME) -y"
